<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tahminEditTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_text"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"

        >
    </EditText>


    <RadioGroup
        android:id="@+id/radioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/secondRadioId"
        app:layout_constraintTop_toBottomOf="@id/tahminEditTextId"
        app:layout_constraintStart_toStartOf="@id/tahminEditTextId"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/firstRadioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:buttonTint="@color/green"
            android:text="@string/first_radio_text"/>
        <RadioButton
            android:id="@+id/secondRadioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:buttonTint="@color/yellow"
            android:text="@string/second_radio_text"/>
        <RadioButton
            android:id="@+id/thirdRadioId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red"
            android:text="@string/third_radio_text"/>

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        android:layout_marginTop="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupId"
        app:layout_constraintStart_toStartOf="@id/tahminEditTextId"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"


        />

    <Button
        android:id="@+id/buttonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/switchId"
        app:layout_constraintStart_toStartOf="@id/tahminEditTextId"
        app:layout_constraintEnd_toEndOf="@id/tahminEditTextId"
        />

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonId"
        app:layout_constraintEnd_toEndOf="@id/buttonId"
        tools:text="@string/deneme"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>